RESOLVED FIXED133104
PutGlobalVar shouldn't have an unconditional store barrier
https://bugs.webkit.org/show_bug.cgi?id=133104
Summary PutGlobalVar shouldn't have an unconditional store barrier
Filip Pizlo
Reported 2014-05-19 20:03:01 PDT
...
Attachments
the patch (1.77 KB, patch)
2015-05-05 22:34 PDT, Filip Pizlo
benjamin: review+
Filip Pizlo
Comment 1 2015-05-05 22:34:49 PDT
Created attachment 252447 [details] the patch
Filip Pizlo
Comment 2 2015-05-05 22:58:33 PDT
Note You need to log in before you can comment on or make changes to this bug.