PutGlobalVar shouldn't have an unconditional store barrier https://bugs.webkit.org/show_bug.cgi?id=133104

Reviewed by Benjamin Poulain.

We don't need a store barrier on PutGlobalVar if the value being stored can be
speculated to not be a cell.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):



Canonical link: https://commits.webkit.org/162686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183852 268f45cc-cd09-0410-ab3c-d52691b4dbfc